fixed top right button on mobile

--- a/views/public/style.css
+++ b/views/public/style.css
@@ -50,6 +50,7 @@
 @media screen and (max-width:768px) {
     #topleftimage1 { display:none }
     #topleftimage2 { display:none }
+    .navbar-nav{ display:none }
     li{text-align:center}
     .navbar-default {border:0px;background-color: white;color:white}
 }
@@ -80,6 +81,18 @@ body>.nav {
 .imgname{
     width:50%;
     margin-top:3%;
+}
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
 #imglogo{
     width:20%;
